--- a/Admin Dashboard Panel HTML-CSS-JavaScript/style.css
+++ b/Admin Dashboard Panel HTML-CSS-JavaScript/style.css
@@ -55,6 +55,11 @@ nav {
     padding: 10px 14px;
     background-color: var(--panel-color);
     border-right: 1px solid var(--border-color);
+    transition: var(--tran-05);
+}
+
+nav.close{
+    width: 73px;
 }
 
 nav .logo-name {
@@ -79,6 +84,12 @@ nav .logo-name .logo_name {
     font-weight: 600;
     color: var(--text-color);
     margin-left: 14px;
+    transition: var(--tran-05);
+}
+
+nav.close .logo_name{
+    opacity: 0;
+    pointer-events: none;
 }
 
 nav .menu-items {
@@ -125,6 +136,12 @@ nav .menu-items {
     font-size: 18px;
     font-weight: 400;
     color: var(--black-light-color);
+    transition: var(--tran-05);
+}
+
+nav.close a .link-name{
+    opacity: 0;
+    pointer-events: none;
 }
 
 .nav-links li a:hover i,
@@ -140,6 +157,7 @@ nav .menu-items {
 .menu-items .mode{
     display: flex;
     align-items: center;
+    white-space: nowrap;
 }
 
 .menu-items .mode-toggle{
@@ -186,6 +204,12 @@ body.dark .switch:before{
     min-height: 100vh;
     width: calc(100% - 250px);
     padding: 10px 14px;
+    transition: var(--tran-05);
+}
+
+nav.close ~ .dashboard{
+    left: 73px;
+    width: calc(100% - 73px);
 }
 
 .dashboard .top{
@@ -198,10 +222,48 @@ body.dark .switch:before{
     align-items: center;
     padding: 10px 14px;
     background-color: var(--panel-color);
+    transition: var(--tran-05);
+}
+
+nav.close ~ .dashboard .top{
+    left: 73px;
+    width: calc(100% - 73px);
 }
 
 .dashboard .top .sidebar-toggle{
     font-size: 26px;
     color: var(--text-color);
     cursor: pointer;
+}
+
+.dashboard .top .search-box{
+    position: relative;
+    height: 45px;
+    max-width: 600px;
+    width: 100%;
+    margin: 0 30px;
+}
+
+.top .search-box input{
+    position: absolute;
+    border: 1px solid var(--border-color);
+    background-color: var(--panel-color);
+    padding: 0 25px 0 50px;
+    border-radius: 5px;
+    height: 100%;
+    width: 100%;
+    color: var(--text-color);
+    font-size: 15px;
+    font-weight: 400;
+    outline: none;
+}
+
+.top .search-box i{
+    position: absolute;
+    left: 15px;
+    font-size: 22px;
+    z-index: 10;
+    top: 50%;
+    transform: translateY(-50%);
+    color: var(--black-light-color);
 }
