--- a/Admin Dashboard Panel HTML-CSS-JavaScript/style.css
+++ b/Admin Dashboard Panel HTML-CSS-JavaScript/style.css
@@ -122,6 +122,10 @@ nav .menu-items {
     background-color: var(--primary-color);
 }
 
+body.dark li a:hover::before{
+    background-color: var(--text-color);
+}
+
 .menu-items li a i{
     font-size: 24px;
     min-width: 45px;
@@ -147,6 +151,11 @@ nav.close a .link-name{
 .nav-links li a:hover i,
 .nav-links li a:hover .link-name{
     color: var(--primary-color);
+}
+
+body.dark .nav-links li a:hover i,
+body.dark .nav-links li a:hover .link-name{
+    color: var(--text-color);
 }
 
 .menu-items .logout-mode{
@@ -266,4 +275,96 @@ nav.close ~ .dashboard .top{
     top: 50%;
     transform: translateY(-50%);
     color: var(--black-light-color);
+}
+
+.top img{
+    width: 40px;
+    border-radius: 50%;
+}
+
+.dashboard .dash-content{
+    padding-top: 50px;
+}
+
+.dash-content .title{
+    display: flex;
+    align-items: center;
+    margin: 60px 0 30px 0;
+}
+
+.dash-content .title i{
+    position: relative;
+    height: 35px;
+    width: 35px;
+    background-color: var(--primary-color);
+    border-radius: 6px;
+    color: var(--title-icon-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+}
+
+.dash-content .title .text{
+    font-size: 24px;
+    font-weight: 500;
+    color: var(--text-color);
+    margin-left: 10px;
+}
+
+.dash-content .boxes{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.dash-content .boxes .box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 12px;
+    width: calc(100% / 3 - 15px);
+    padding: 15px 20px;
+    background-color: var(--box1-color)
+}
+
+.boxes .box i{
+    font-size: 35px;
+    color: var(--text-color);
+}
+
+.boxes .box .text{
+    white-space: nowrap;
+    font-size: 18px;
+    font-weight: 500;
+    color: var(--text-color);
+}
+
+.boxes .box .number{
+    font-size: 40px;
+    font-weight: 500;
+    color: var(--text-color);
+}
+
+.boxes .box.box2{
+    background-color: var(--box2-color);
+}
+
+.boxes .box.box3{
+    background-color: var(--box3-color);
+}
+
+.dashboard .activity .activity-data{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.activity .activity-data{
+    width: calc(100% / 5 - 15px);
+}
+
+.activity-data .data-title{
+    font-size: 20px;
+    font-weight: 500;
 }
